Fix for the pivottable cells not being aligned with the row headers. Thansk to Zoltán Kiss!

--- a/src/css/mdpivottable.css
+++ b/src/css/mdpivottable.css
@@ -159,7 +159,6 @@ span.toggle {
 }
 
 span.toggle:before {
-  font-family: monospace
 }
 
 table.pivot-table td.not-drilled-down-has-children span.toggle:before {
